fix: hide the scrollbar caused by page rotation in space_balls (yunfachi)

--- a/frontend/static/funbox/space_balls.css
+++ b/frontend/static/funbox/space_balls.css
@@ -17,9 +17,10 @@ body {
 }
 
 main {
-  transform: rotateX(35deg);
+  perspective: 500px;
+  overflow: hidden;
 }
 
-#contentWrapper {
-  perspective: 500px;
+main .page {
+  transform: rotateX(35deg);
 }
